# python-architecture-pattern

./: pyproject.toml
chater_03_abstraction/: main.py  sync.py
chater_03_abstraction/source/: test.txt
