[tool.poetry]
name = "python-architecture-pattern"
version = "0.1.0"
description = ""
authors = ["Jerry YT Chen <nmjk2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
